--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-    "minecraft_version": "1.20.1",
+    "minecraft_version": "1.20.2",
     "host": "localhost",
-    "port": 55916,
-    "auth": "offline",
+    "port": 25565,
+    "auth": "microsoft",
     "allow_insecure_coding": false
 }
